# autopercep

./: .gitignore  README.md  cam_info_dummy.ini  info.ini  opencv_cam_params.yaml  parameters.json  v4l2_params.yaml  v4l2_setting.sh
line_follow/: line_follow_cam.py
pattern_generator/: generate_3D_pattern_v3.py
src/image_saver/: package.xml  setup.cfg  setup.py
src/image_saver/image_saver/: save_image_node.py
src/image_saver/launch/: save_v4l2_images.launch.py
src/random_movement/: package.xml  setup.cfg  setup.py
src/random_movement/random_movement/: display.py  move.py  move_old.py  perlin_improved.py  reverse_speed.py
src/receive_img_pose/: package.xml  setup.cfg  setup.py
src/receive_img_pose/launch/: receive_img_pose_launch.py
src/receive_img_pose/receive_img_pose/: receiver.py
src/speed_receiver/: package.xml  setup.cfg  setup.py
src/speed_receiver/speed_receiver/: receiver.py  test_speed_publisher.py
training/: check_coords.py  create_demo_video.py  dataloader.py  export_onnx.py  load_data.ipynb  loss.py  network.py  test_dataloader.py  train.py  train_picar.ipynb  utils.py
